styles/SSCommon.css
.title_container {
    /*background-image: url(../assets/SSPages/SS1/ss1_mock1.png);*/
    background-size: 100vw;
    background-repeat: no-repeat;
    height: 57vw;
}

p {
    font-weight: 400;
    line-height: 2.5vw;
    font-size: 1.75vw;
}

h1 {
    font-size: 7vw;
    font-family: 'Montserrat';
    font-weight: 500;
    line-height: 1.2;
}

.header1 {
    background-image: url(../assets/SSPages/SS1/ss1_mock1.png);
}

.header2 {
    background-image: url(../assets/SSPages/SS2/ss2_mock1.png);
}

.header3 {
    background-image: url(../assets/SSPages/SS3/ss3_mock1.png);
}

.header4 {
    background-image: url(../assets/SSPages/SS4/ss4_mock1.png);
}

.header5 {
    background-image: url(../assets/SSPages/SS5/ss5_mock1.png);
}

.header6 {
    background-image: url(../assets/SSPages/SS6/ss6_mock1.png);
}

.header7 {
    background-image: url(../assets/SSPages/SS7/ss7_mock1.png);
}

.header8 {
    background-image: url(../assets/SSPages/SS8/ss8_mock1.png);
}

.header9 {
    background-image: url(../assets/SSPages/SS9/ss9_mock1.png);
}

.in_margin {
    padding-left: 5vw;
    padding-right: 5vw;
}

.instr_title img {
    height: 2.5vw;
    margin-right: .75vw;
}

.instr_title h2 {
    font-weight: 600;
    margin-bottom: 2vw;
}

.bold{
    font-weight: bold;
    padding-right: 10px;
    padding-top: 0vw;
    /*margin-left: 1vw;*/
}

h4 {
    font-size: 3vw;
    font-weight: 600;
}

.title_container nav a{
    color: black;
}

.top_step_nav {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin-top: 15vw;
}

.top_step_nav > a {
    font-size: 15vw;
    opacity: 0.15;
    font-weight: 300;
    text-decoration: none;
}

/* ========== Color Schemes ============ */

.purple_bg {
    background-color: #463489;
}

.orange_bg {
    background-color: #FF9B2A;
}

.teal_bg {
    background-color: #00DAA9;
}

.coral_bg {
    background-color: #FF604E;
}

.navy_bg {
    background-color: #283977;
}

.neutral_bg {
    background-color: #F6EDE1;
}

.purple {
    color: #463489;
}

.white {
    color: white;
}

.teal {
    color: #00DAA9;
}

.orange {
    color: #FF9B2A;
}

.coral {
    color: #FF604E;
}

.horizontal_line_lightgray {
    border-bottom: 1px solid lightgray;
    width: 80vw;
    margin-top: 10px;
    margin-bottom: 10vh;
}

.horizontal_line_teal {
    border-bottom: .12vw solid #00DAA9;
    width: 100%;
    margin-top: 1vw;
    margin-bottom: 1vw;
}

.horizontal_line_orange {
    border-bottom: .12vw solid #FF9B2A;
    width: 100%;
    margin-top: 1vw;
    margin-bottom: 1vw;
}

.horizontal_line_purple {
    border-bottom: .12vw solid #463489;
    width: 100%;
    margin-top: 1vw;
    margin-bottom: 1vw;
}

/*     Button Stuff */

.orange_bt {
    color: white;
    background-color: #FF9B2A;
    filter: none;
    border: 1px solid #FF9B2A;
}

.orange_bt:hover {
    color: #FF9B2A;
    filter: brightness(0) saturate(100%) invert(70%) sepia(27%) saturate(2992%) hue-rotate(338deg) brightness(103%) contrast(102%);
    background-color: rgba(0,0,0,0);
}

.purple_bt {
    color: white;
    background-color: #463489;
    filter: none;
    border: 1px solid #463489;
}

.purple_bt:hover {
    color: #463489;
    filter: brightness(0) saturate(100%) invert(20%) sepia(41%) saturate(2541%) hue-rotate(233deg) brightness(93%) contrast(92%);
    background-color: rgba(0,0,0,0);
}

.coral_bt {
    color: white;
    background-color: #FF604E;
    filter: none;
    border: 1px solid #FF604E;
}

.coral_bt:hover {
    color: #FF604E;
    filter: brightness(0) saturate(100%) invert(63%) sepia(81%) saturate(3776%) hue-rotate(327deg) brightness(98%) contrast(108%);
    background-color: rgba(0,0,0,0);
}

.teal_bt {
    color: white;
    border: 1px solid #00DAA9;
    filter: none;
    background-color: #00DAA9;
}

.teal_bt:hover {
    background-color: rgba(0,0,0,0);
    color: #00DAA9;
    filter: brightness(0) saturate(100%) invert(69%) sepia(27%) saturate(6732%) hue-rotate(123deg) brightness(101%) contrast(101%);
}

.orange_bt_inv {
    color: #FF9B2A;
    border: 1px solid #FF9B2A;
    filter: brightness(0) saturate(100%) invert(70%) sepia(27%) saturate(2992%) hue-rotate(338deg) brightness(103%) contrast(102%);
}

.orange_bt_inv:hover {
    color: white;
    background-color: #FF9B2A;
    filter: none;
}

.purple_bt_inv {
    color: #5F1AC1;
    border: 1px solid #463489;
    filter: brightness(0) saturate(100%) invert(20%) sepia(41%) saturate(2541%) hue-rotate(233deg) brightness(93%) contrast(92%);
}

.purple_bt_inv:hover {
    color: white;
    background-color: #463489;
    filter: none;
}

.coral_bt_inv {
    color: #FF604E;
    border: 1px solid #FF604E;
    filter: brightness(0) saturate(100%) invert(63%) sepia(81%) saturate(3776%) hue-rotate(327deg) brightness(98%) contrast(108%);
}

.coral_bt_inv:hover {
    color: white;
    background-color: #FF604E;
    filter: none;
}

.teal_bt_inv {
    color: #00DAA9;
    border: 1px solid #00DAA9;
    filter: brightness(0) saturate(100%) invert(69%) sepia(27%) saturate(6732%) hue-rotate(123deg) brightness(101%) contrast(101%);
}

.teal_bt_inv:hover {
    background-color: #00DAA9;
    color: white;
    filter: none;
}

.white_bt_inv {
    color: white;
    border: 1px solid white;
}

.white_bt_inv:hover {
    background-color: white;
}

.white_bt_inv:hover img {
    opacity: 0;
}

.white_bt_inv:hover p {
    opacity: 0;
}

/* ======================= */

.intro_section {
    color: white;
    padding-top: 3.0vw;
    padding-bottom: 0vw;

}

.split_section {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
}

.intro_left {
    width: 45vw;
    margin-top: 1vw;
    min-height: 0vw;
}

.intro_right {
    width: 40vw;
}

.coverImg {
    width: 31vw;
    position: absolute;
    left: 63vw;
    top: 85vw;
}

.ss_num {
    position: relative;
    top: -5vw;
    text-decoration: underline;
    font-size: 12.5vw;
    font-weight: 600;
    margin-bottom: 3vw;
}

.download_button_row {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: flex-start;
    margin-bottom: 2vw;
}


.download_button{
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    font-family: "montserrat-medium";
    font-weight: 500;
    padding: 1.5vw 3vw 1.5vw 3vw;
    margin: 2vw 2vw 2vw 0vw;
    text-decoration: none;
    font-size: 1.85vw;
    width: fit-content;
    border-radius: 3.5vw;
    transition-duration: 0.7s;
    transition-property: color, background-color;
    -webkit-transition-duration: 0.7s;
    -webkit-transition-property: color, background-color;
    box-shadow: 5px 10px 8px rgba(37, 37, 37, 0.35) ;
}

.download_button > img {
    width: 2vw;
    margin-right: 1vw;
}

/* ================================== */

.download_section {
    display: flex;
    flex-direction: column;
    align-items: center;
    max-height: 40vh;
}

.download_section > div {
    width: 80vw;
    border-top: 2px solid lightgray;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    padding-top: 10vh;
    padding-bottom: 10vh;
}

.download_section h3 {
    font-weight: 600;
    font-size: 3.5vw;
}

.download_button_inverse{
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    align-items: center;
    font-family: "montserrat-medium";
    font-weight: 500;
    padding: 1.5vw 3vw 1.5vw 3vw;
    font-size: 1.85vw;
    border-radius: 3.5vw;
    width: fit-content;
    text-decoration: none;
    transition-duration: 0.7s;
    transition-property: color, background-color;
    -webkit-transition-duration: 0.7s;
    -webkit-transition-property: color, background-color;
}

.download_button_inverse > img {
    width: 2vw;
    margin-right: 1vw;
}

/* ======================== */
.bot_step_nav {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 10vh;
    margin-bottom: 10vh;
}
.bot_step_nav  h4{
    align-self: flex-start;
    margin-left: 10vw;
}

.bot_step_nav > a {
    align-self: flex-start;
    text-decoration: underline;
    font-weight: 500;
    margin-left: 10vw;
}

.sliding_menu{
    display: flex;
    flex-direction: row;
    justify-content: space-around;
    margin-top: 2vh;
    width: 90vw;
    align-items: center;
    /*margin-left: 5vw;*/
}

.steps p{
    padding: 5%; /* used to be 20px */
    /*width: 350px;*/
    width: 90%;
    height: 50px;
    color: black;
    font-size: 10px;
    line-height: 15px;
}

.sliding_menu .steps{
    /*margin-top: 80px;*/
    /*margin-bottom: 40px;*/
    margin: 1vw;
    width: 13vw;
    /*margin-right:auto;*/
    transition-duration: 0.3s;
    transition-property: box-shadow;
    -webkit-transition-duration: 0.3s;
    -webkit-transition-property: box-shadow, width;
}

.arrow{
    background-color: lightgray;
    color: white;
    border-radius: 50px;
    width: 40px;
    height: 40px;
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
}

.arrow > p{
    font-size: 40px;
    position: relative;
    top: -3px;
}

.sliding_menu img {
    width: 100%;
}

.steps:hover {
    box-shadow: 2.5px 2.5px 10px 2.5px rgba(0, 0, 0, 0.4);
    width: 15vw;
    -webkit-box-shadow: 2.5px 2.5px 10px 2.5px rgba(0, 0, 0, 0.4);
}

.popup {
    position: fixed;
    width: 100vw;
    height: 100vh;
    background-color: rgba(0,0,0,0.5);
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    z-index: 2;
}

.popup img {
    width: 20vw;
    margin-left: 5vw;
    margin-right: 5vw;
}

.closePopUp {
    position: absolute;
    top: 2.5vh;
    left: 2.5vw;
    color: white;
    font-size: 20px;
    cursor: pointer;
}

@media (max-width: 720px) {
    h1 {
        font-size: 25px;
    }
    h4 {
        font-size: 20px;
    }
    p {
        font-size: 16px;
        line-height: 20px;
    }

    .title_container {
        background-size: 120vw;
        background-repeat: no-repeat;
        height: 69vw;
        background-position-x: center;
    }

    .split_section {
        display: flex;
        flex-direction: column-reverse;
        justify-content: center;
        align-items: center;
        padding-bottom: 5vw;
    }

    .intro_left {
        width: 80vw;
    }

    .intro_left p {
        max-width: 80vw;
    }

    .download_button_row > p {
        display: none;
    }

    .coverImg {
        display: none;
    }

    .download_button img{
        width: 5vw;
    }

    .ss_num {
        font-size: 70px;
        top: -7vw;
    }

    .top_step_nav {
        align-items: flex-start;
        margin-top: 4vw;
    }

    .top_step_nav > a {
        font-size: 100px;
        line-height: 50px;
    }

    .sliding_menu .steps {
        width: 20vw;
    }

    .download_section div {
        padding-top: 10vw;
        padding-bottom: 10vw;
        flex-direction: column;
        height: 100%;
    }

    .download_section div h3{
        font-size: 20px;
        margin-bottom: 5vw;
    }

    .download_button_row {
        justify-content: center;
    }

    .download_button {
        padding: 3vw 10vw 3vw 10vw;
        border-radius: 10vw;
        font-size: 16px;
        margin-bottom: 5px;
    }

    .download_button img {
        width: 20px;
    }

    .download_button_inverse {
        padding: 3vw 10vw 3vw 10vw;
        border-radius: 10vw;
        font-size: 16px;
        margin-bottom: 5px;
    }

    .download_button_inverse img {
        width: 20px;
    }

    .bot_step_nav {
        margin-top: 5vh;
        margin-bottom: 5vh;
    }

    .bot_step_nav h4 {
        font-size: 25px;
    }
    .bot_step_nav > a {
        margin-top: 5vw;
        font-size: 20px;
    }

    .sliding_menu {
        width: 100vw;
    }

    .popup a img {
        width: 30vw;
    }

    .closePopUp {
        font-size: 40px;
    }
}

